@@ -66,10 +66,15 @@ IF(BUILD_JPWL)
   j2k_to_image.c
   ${common_SRCS}
   )
+  
+  SET_PROPERTY(
+     TARGET JPWL_j2k_to_image
+     APPEND PROPERTY COMPILE_DEFINITIONS USE_JPWL
+  )
 
   TARGET_LINK_LIBRARIES(JPWL_j2k_to_image ${OPENJPEG_LIBRARY_NAME}_JPWL
     ${LCMS_LIBNAME} ${Z_LIBNAME} ${PNG_LIBNAME} ${TIFF_LIBNAME})
-  #
+  
   IF(UNIX)
     TARGET_LINK_LIBRARIES(JPWL_j2k_to_image m)
   ENDIF(UNIX)
@@ -78,10 +83,15 @@ IF(BUILD_JPWL)
   image_to_j2k.c
   ${common_SRCS}
   )
+  
+  SET_PROPERTY(
+     TARGET JPWL_image_to_j2k
+     APPEND PROPERTY COMPILE_DEFINITIONS USE_JPWL
+  )
 
   TARGET_LINK_LIBRARIES(JPWL_image_to_j2k ${OPENJPEG_LIBRARY_NAME}_JPWL 
   	${LCMS_LIBNAME} ${Z_LIBNAME} ${PNG_LIBNAME} ${TIFF_LIBNAME})
-  #
+
   IF(UNIX)
     TARGET_LINK_LIBRARIES(JPWL_image_to_j2k m)
   ENDIF(UNIX)
